--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
----
-layout: page
-title: Sohini Chattopadhyay
-subtitle: Historian on the loose (and on the run)
-use-site-title: true
----
+<!doctype html>
+<html>
+<title>Sohini Chattopadhyay</title>
 
 <div class="posts-list">
   {% for post in paginator.posts %}
@@ -70,3 +67,4 @@ use-site-title: true
   {% endif %}
 </ul>
 {% endif %}
+</html>
