--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-<!doctype html>
-<html>
-<title>Sohini Chattopadhyay</title>
+---
+layout: page
+title: Sohini Chattopadhyay
+subtitle: Historian on the loose (and on the run)
+use-site-title: true
+---
 
 <div class="posts-list">
   {% for post in paginator.posts %}
@@ -67,4 +70,3 @@
   {% endif %}
 </ul>
 {% endif %}
-</html>
