--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Sohini Chattopadhyay
+title: <span style="color:red">Sohini Chattopadhyay</span>
 subtitle: Historian on the loose (and on the run)
 use-site-title: true
 ---
