--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: <span style="color:"white">Sohini Chattopadhyay</span>
-	subtitle: <span style="color:"white">Historian on the loose (and on the run)</span>
+subtitle: Historian on the loose.
 use-site-title: true
 ---
 
