--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: <span style="color:"white">Sohini Chattopadhyay</span>
+title: Sohini Chattopadhyay
 subtitle: Historian on the loose.
 use-site-title: true
 ---
