--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: ##Test run.
+title: <html><font size="14">Sohini Chattopadhyay</font></html>
 subtitle: Historian on the loose.
 use-site-title: true
 ---
