--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 ---
 layout: page
-title: <html><font size="14">Sohini Chattopadhyay</font></html>
-subtitle: Historian on the loose.
-use-site-title: true
 ---
+<html><font size="14">Sohini Chattopadhyay</font></html>
+
 
 <div class="posts-list">
   {% for post in paginator.posts %}
