--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: page
 ---
-<html><font size="14">Sohini Chattopadhyay</font></html>
-
+<html>
+	<font size="14">SOHINI CHATTOPADHYAY</font>
+	<font size="12"><b>Historian on the loose (and on the run)</b></font>
 
 <div class="posts-list">
   {% for post in paginator.posts %}
