--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 ---
 layout: page
 ---
-<html>
-	<font size="14">SOHINI CHATTOPADHYAY</font>
-	<font size="12"><b>Historian on the loose (and on the run)</b></font>
+<html><font size="14">SOHINI CHATTOPADHYAY</font></html>
 
 <div class="posts-list">
   {% for post in paginator.posts %}
