--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 ---
-<html><font size="14">SOHINI CHATTOPADHYAY</font></html>
+<html><font size="12"><b>Sohini Chattopadhyay</b></font></html>
 
 <div class="posts-list">
   {% for post in paginator.posts %}
