--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 use-site-title: true
 ---
-<html><font size="12"><b>Sohini Chattopadhyay</b></font></html>
+<html><center><font size="12"><b>Sohini Chattopadhyay</b></font><center></html>
 
 <div class="posts-list">
   {% for post in paginator.posts %}
