--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: page
 use-site-title: true
 ---
-<html><center><font size="12"><b>Sohini Chattopadhyay</b></font><center></html>
+<html><center><font size="12"><b>Sohini Chattopadhyay</b></font><center>
+<center> A historian in the quest for knowing what is history in the age of shrunken time </center></html>
 
 <div class="posts-list">
   {% for post in paginator.posts %}
