--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 use-site-title: true
 ---
 <html><center><font size="12"><b>Sohini Chattopadhyay</b></font><center>
-<center> A historian in the quest for knowing what is history in the age of shrunken time </center></html>
+<center><b>A historian in the quest for knowing what is history in the age of shrunken memory and fast time </b></center></html>
 
 <div class="posts-list">
   {% for post in paginator.posts %}
